--- a/tasty_bytes_dbt_demo/profiles.yml
+++ b/tasty_bytes_dbt_demo/profiles.yml
@@ -6,14 +6,14 @@ tasty_bytes:
       account: 'not needed'
       user: 'not needed'
       role: accountadmin
-      database: tasty_bytes_dbt_db
+      database: _parkj
       schema: dev
-      warehouse: tasty_bytes_dbt_wh
+      warehouse: compute_wh
     prod:
       type: snowflake
       account: 'not needed'
       user: 'not needed'
       role: accountadmin
-      database: tasty_bytes_dbt_db
+      database: _parkj
       schema: prod
-      warehouse: tasty_bytes_dbt_wh
+      warehouse: compute_wh
